@@ -1,4 +1,4 @@
 --- 
 :MAJOR: 0
 :MINOR: 6
-:PATCH: 4
+:PATCH: 5
