@@ -4,6 +4,9 @@ FAMILIA, CHANGES
 #### 0.6.5 (2011-01-01) ###############################
 
 * FIXED: Classes that include Familia now use the suffix defined for that class.
+* FIXED: Familia::String#value= calls update_expiration 
+* CHANGE: RedisObject classes grab the ttl from @opts[:class]
+
 
 #### 0.6.4 (2010-12-31) ###############################
 
